# parakeet-kbd

./: .gitignore  LICENSE  README.md  pyproject.toml
parakeet_claude/: __main__.py  client.py  config.py  key_detect.py  pty_proxy.py  recorder.py  status.py
parakeet_kbd/: __main__.py  daemon.py
parakeet_server/: __main__.py  protocol.py  server.py
