[project]
name = "parakeet-kbd"
version = "0.1.0"
description = "System-wide voice-to-keyboard using Nvidia Parakeet TDT 0.6B V3"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "nemo_toolkit[asr]>=2.4",
    "torch>=2.4",
    "pynput>=1.7",
]

[project.urls]
Repository = "https://github.com/BrainBuilders/parakeet-kbd"

[project.scripts]
parakeet-kbd = "parakeet_kbd.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["parakeet_kbd*"]
